Fixed some overflow & styling

--- a/recipes/app.css
+++ b/recipes/app.css
@@ -3,7 +3,7 @@ body {
     height: 120vh;
     width: 100%;
     text-align: center;
-    background-image: linear-gradient(rgba(100, 89, 89, 0.637),rgba(163, 150, 150, 0.288)), url("https://images.unsplash.com/photo-1466637574441-749b8f19452f?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=880&q=80");
+    background-image: linear-gradient(rgb(7, 0, 0),rgba(219, 197, 197, 0.288)), url("https://images.unsplash.com/photo-1466637574441-749b8f19452f?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=880&q=80");
     background-size: cover;
     color: white;
 }
